# twelve-steps-navier-stokes

./: .gitignore  README.md  ch01.py  pyproject.toml
src/: main.py
src/lib/: data.py  equations.py  runners.py
