[tool.poetry]
name = "twelve-steps-navier-stokes"
version = "0.1.0"
description = ""
authors = ["Federico Dolce <psykopear@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
matplotlib = "^3.3.4"
numpy = "^1.20.1"

[tool.poetry.dev-dependencies]
ipython = "^7.21.0"
black = "^20.8b1"
mypy = "^0.812"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
